# LogRescuer

./: CMakeLists.txt  Dockerfile  README.md  conanfile.py
apps/: logrescuer.cpp
cmake/modules/: FindBrotli.cmake  FindZSTD.cmake
include/: Compressor.h  CompressorFactory.h  FileCompressor.h  FileMeta.h  HashUtils.h  IO.h  ThreadPool.h  ThreadPool.inl
python/: folder_tree_comparator.py  log_generator.py
src/: BrotliCompressor.cpp  BrotliCompressor.h  CompressorFactory.cpp  FileCompressor.cpp  HashUtils.cpp  IO.cpp  ThreadPool.cpp  ZStandardCompressor.cpp  ZStandardCompressor.h  ZlibCompressor.cpp  ZlibCompressor.h
tests/: CMakeLists.txt  conanfile.py  test_FileCompressor.cpp  test_HashUtils.cpp  test_IO.cpp  test_package.cpp
